Fix slider handle from sometimes getting cut off when scaled.

--- a/app/client/stylesheets/slider.import.less
+++ b/app/client/stylesheets/slider.import.less
@@ -66,7 +66,7 @@
     background: black;
     border: 0;
     border-radius: 50%;
-    box-shadow: none;
+    box-shadow: 0 0 1px rgba(0,0,0,0.1);
     
     transition: transform 0.1s;
     cursor: pointer;
@@ -89,7 +89,7 @@
   }
   
   .noUi-active {
-    background: black !important;
+    background: #333 !important;
     transform: scale(0.95);
   }
 }
